@@ -37,6 +37,8 @@ module ActiveMerchant #:nodoc:
       
       self.supported_cardtypes = [:visa, :master, :american_express, :jcb, :discover]
       self.supported_countries = ['CA', 'US']
+      self.homepage_url = 'http://www.e-xact.com'
+      self.display_name = 'E-xact'
       
       attr_reader :url
       attr_reader :response
