@@ -10,6 +10,8 @@ module ActiveMerchant #:nodoc:
       
       self.supported_countries = ['CA']
       self.supported_cardtypes = [:visa, :master]
+      self.homepage_url = 'http://www.moneris.com/'
+      self.display_name = 'Moneris'
 
       TEST_URL = 'https://esqa.moneris.com/gateway2/servlet/MpgRequest'
       LIVE_URL = 'https://www3.moneris.com/gateway2/servlet/MpgRequest'
